// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totalling: 
    $23,533.43
  </h1>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling: 
    $2.35
  </h1>
</div>
`;
